--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "substrate-front-end-template",
+  "name": "kitties-ui",
   "version": "0.1.1",
   "private": true,
   "author": "Parity Technologies <admin@parity.io>",
   "license": "Unlicense",
-  "homepage": "https://substrate-developer-hub.github.io/substrate-front-end-template",
+  "homepage": "./",
   "bugs": {
-    "url": "https://github.com/substrate-developer-hub/substrate-front-end-template/issues"
+    "url": "https://github.com/neoscript99/substrate-course-03-kitties-ui/issues"
   },
   "keywords": [
     "substrate",
@@ -70,16 +70,7 @@
     "node": ">=14",
     "npm": ">=7"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    "default"
+  ]
 }
