1.brower配置；2、wsl2也支持127.0.0.1；

--- a/package.json
+++ b/package.json
@@ -70,7 +70,16 @@
     "node": ">=14",
     "npm": ">=7"
   },
-  "browserslist": [
-    "default"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
